--- a/mongodb/manifest.yaml
+++ b/mongodb/manifest.yaml
@@ -1,13 +1,13 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb
   namespace: roboshop
-  labels:
+  labels: # these labels are deployment labels
     app: mongodb
     project: roboshop
     tier: db
-  spec:
+spec:
   replicas: 1
   selector:
     matchLabels: # these labels are used to find the pods
@@ -23,7 +23,7 @@ metadata:
     spec:
       containers:
       - name: mongodb
-        image: kalyanpallala/mongodb:v1
+        image: joindevops/mongodb:v1
         imagePullPolicy: Always
 ---
 apiVersion: v1
