--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -1,8 +1,20 @@
-apiVersion : v1
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: catalogue
+  namespace: roboshop
+data:
+  MONGO: "true"
+---
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: catalogue
   namespace: roboshop
+  labels: # these labels are deployment labels
+    app: catalogue
+    project: roboshop
+    tier: app
 spec:
   replicas: 1
   selector:
@@ -21,6 +33,9 @@ spec:
       - name: catalogue
         image: joindevops/catalogue:v1
         imagePullPolicy: Always
+        envFrom:
+        - configMapRef:
+            name: catalogue
 ---
 apiVersion: v1
 kind: Service
@@ -31,7 +46,7 @@ spec:
   selector:
     app: catalogue
     project: roboshop
-    tier: db
+    tier: app
   ports:
   - protocol: TCP
     port: 8080 #service-port
